--- a/src/SearchBar.scss
+++ b/src/SearchBar.scss
@@ -1,4 +1,47 @@
 form {
-    border: 2px solid red;
+    display: flex;
+    background-color: white;
+    width: fit-content;
+    border-radius: 4px;
+
+    label {
+        color: #C4C4C4;
+    }
+
+    input {
+        border: none;
+    }
+
+    select {
+        background-color: white;
+        border: none;
+        padding-right: 100px;
+    }
     
+    .inputs {
+        display: flex;
+        gap: 20px;
+        padding: 10px;
+        .textInput,
+        .selectInput {
+            display: flex;
+            flex-direction: column;
+            background-color: white;
+            gap: 10px;
+        
+        }
+
+        .textInput {
+            border-right: 1px solid #C4C4C4;
+            padding-right: 15px;
+        }
+    }
+
+    
+    button {
+        background-color: #D2F34C;
+        border: none;
+        padding: 10px;
+        border-radius: 0px 4px 4px 0px;
+    }
 }
