changes positioning of images and finished form

--- a/src/NavMenu.scss
+++ b/src/NavMenu.scss
@@ -12,6 +12,13 @@ nav {
     }
 }
 
+.headerWrapper {
+    width: 95%;
+    margin: 0 auto;
+    max-width: 1920px;
+}
+
+
 .navFlex {
     display: flex;
     align-items: center;
