--- a/src/Home.scss
+++ b/src/Home.scss
@@ -1,6 +1,6 @@
 header {
     background-color: #254135;
-    padding-bottom: 150px;
+    height: 100vh;
     
     p {
         color: white;
@@ -10,7 +10,7 @@ header {
 h1 {
     color: white;
     text-align: left;
-    font-size: 5.625rem;
+    font-size: 5rem;
     
     .headingSpan1 {
         color: #D2F34C;
@@ -25,35 +25,55 @@ h1 {
     justify-content: space-between;
 }
 
+.headerLeft,
+.headerRight {
+    width: 100%;
+}
+
 .headerRight {
     position: relative;
 }
 
 .headerRectangleContainer {
-    position: absolute;
-    height: 731px;
-    width: 596px;
+    position: relative;
+    max-height: 745px;
+    max-width: 650px;
     overflow: hidden;
-    top: 42px;
-    right: 40px;
-
+    top: 67px;
+    left: 60px;
+    
     .headerRectangle {
-        position: absolute;
+        width: 100%;
+        height: 100%;
     }
 }
 
-
 .headerImageContainer {
     position: absolute;
-    height: 731px;
-    width: 596px;
+    height: 770px;
+    width: 650px;
     overflow: hidden;
-    top: 80px;
-    right: -10px;
+    top: 110px;
+    left: 110px;
     
     .headerImage {
-        width: 100%;
         height: 100%;
+        max-width: 100%;
         object-fit: cover;
     }
+}
+
+.headerContentleft {
+    position: relative;
+}
+
+.headerSearch {
+    position: absolute;
+    width: 51.5%;
+    z-index: 1;
+}
+
+
+.faded {
+    color: #C4C4C4;
 }
