--- a/src/SearchBar.scss
+++ b/src/SearchBar.scss
@@ -1,11 +1,12 @@
 form {
     display: flex;
     background-color: white;
-    width: fit-content;
-    border-radius: 4px;
+    border-radius: 8px;
+    height: 90px;
 
     label {
         color: #C4C4C4;
+        font-size: 0.7rem
     }
 
     input {
@@ -22,18 +23,21 @@ form {
         display: flex;
         gap: 20px;
         padding: 10px;
+        width: 100%;
         .textInput,
         .selectInput {
+            width: 100%;
             display: flex;
             flex-direction: column;
             background-color: white;
             gap: 10px;
+            padding: 10px 0px 10px 15px;
         
         }
 
-        .textInput {
-            border-right: 1px solid #C4C4C4;
-            padding-right: 15px;
+        .selectInput {
+            border-left: 1px solid #C4C4C4;
+            padding-left: 15px;
         }
     }
 
@@ -42,6 +46,6 @@ form {
         background-color: #D2F34C;
         border: none;
         padding: 10px;
-        border-radius: 0px 4px 4px 0px;
+        border-radius: 0px 8px 8px 0px;
     }
 }
