--- a/src/HomeHeader.scss
+++ b/src/HomeHeader.scss
@@ -57,8 +57,8 @@ h1 {
     left: 110px;
     
     .headerImage {
+        width: 100%;
         height: 100%;
-        max-width: 100%;
         object-fit: cover;
     }
 }
