--- a/src/Footer.scss
+++ b/src/Footer.scss
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 1px solid $grey;
 }
 
 .footerLists {
@@ -13,4 +14,10 @@
         display: flex;
         flex-direction: column;
     }
+}
+
+.footerMiddleFlex {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
 }
