--- a/src/Categories.scss
+++ b/src/Categories.scss
@@ -24,19 +24,22 @@
 .categoriesLeft {
     display: flex;
     align-items: center;
-    position: relative;
     width: 50%;
-
+    
     h3 {
         margin-top: 0px;
         font-size: 3.6rem;
         color: $darkGreen;
     }
-
-    img {
-        position: absolute;
-        right: 140px;
-        top: -30px;
+    
+    .fireworks {
+        position: relative;
+        
+        img {
+            position: absolute;
+            right: 120px;
+            bottom: 70px;
+        }
     }
     
 }
