--- a/src/HomeCarousels.scss
+++ b/src/HomeCarousels.scss
@@ -1,22 +1,25 @@
 @import './styles/variables.scss';
 
-.talentSection {
+.talentSection,
+.reviewSection {
     display: flex;
     flex-direction: column;
 
-    .talentTitle {
-        display: flex;
-        align-items: flex-end;
-        justify-content: space-between;
+}
+.talentTitle,
+.reviewTitle {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
 
-        h2 {
-            max-width: 50%;
-        }
-
+    h2 {
+        max-width: 50%;
     }
+
 }
 
-.talentButtons {
+.talentButtons,
+.reviewButtons {
     margin-bottom: 74.7px;
     display: flex;
     gap: 20px;
@@ -61,8 +64,6 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    height: 500px;
-    max-width: 280px;
     transition: transform 0.5s;
     width: calc(100% / 4);
 }
@@ -78,5 +79,31 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+    }
+}
+
+.reviewCarousel {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+
+    .reviewInner {
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 8.8%;
+        max-width: 100%;
+        white-space: nowrap;
+    }
+
+    .reviewCard {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        transition: transform 0.5s;
+        width: calc(100% / 2);
     }
 }
